# ShoptoyfastAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_build.bash  dockerignore  install.bash  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bash  run.bat
migrations/: env.py
migrations/versions/: 7feef75ff0b1_database_creation.py
src/: __main__.py  base_repository.py  base_schema.py  session.py  settings.py
src/api/: category.py  category_image.py  product.py  product_image.py  user.py
src/api/categories/: category.py
src/api/category/: category.py
src/api/image/: category_image.py  files.py  product_image.py
src/api/images/: category_image.py  product_image.py
src/api/product/: product.py
src/api/products/: product.py
src/categories/: api.py  models.py  repositories.py  schemas.py
src/category_images/: api.py  models.py  repositories.py  schemas.py
src/common/constant/: constant.py
src/common/constants/: constant.py
src/common/dto/: category.py  category_images.py  product.py  product_images.py
src/common/file_check/: file_check.py
src/common/filecheck/: file_check.py
src/common/filechek/: file_check.py
src/common/users/: authentication.py  check_auth.py  user.py
src/core/: session.py  settings.py
src/database/models/: __init__.py  base.py  category.py  image.py  product.py  user.py
src/database/repositories/: __init__.py  base.py  category.py  category_image.py  product.py  product_image.py  user.py
src/product_images/: api.py  models.py  repositories.py  schemas.py
src/products/: api.py  models.py  repositories.py  schemas.py
src/users/: api.py  authentication.py  check_auth.py  models.py  repositories.py  schemas.py
tests/: conftest.py  test_categories.py
(+23 files in other folders)
