[project]
name = "shoptoyfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.4",
    "httpx>=0.28.1",
    "aiosqlite>=0.21.0",
    "pytest==8.3.3",
    "pytest-asyncio>=0.25.3",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=24.11.0",
    "anyio>=4.8.0",
]


[tool.mypy]
strict = false
exclude = [
    "^venv/.*$",
    "^migrations/.*$",
    "^tests/.*$",
]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
exclude =[
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    ".env",
    ".idea",
    "migrations"
]


line-length = 79
target-version = "py310"


[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    # pycodestyle
    #"E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    #"B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[lint.extend-per-file-ignores]
"__init__.py" = ["F401"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = "test_*.py"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "WARNING"
